# baechus-portraits-cp

./: .prettierrc  README.md  baechus-portraits-cp.code-workspace  builder.py  common.py  config.json  configuration.py  content.json  loader.py  main.js  main.py  manifest-sve.template.json  manifest.json  mod.json  package.json  pyproject.toml
.github/workflows/: build.yaml  build.yml
data/: config.json  content.json  manifest.json
dependencies/: sve.json
patches/sve/: Andy.json  Olivia.json  Sophia.json  Susan.json  Victor.json
src/: builder.py  common.py  config.json  configuration.py  content.json  loader.py  main.py  manifest.json
