[tool.poetry]
name = "baechus-portraits-cp"
version = "0.1.0"
description = "Baechu's Portraits mod updated for Content Patcher. The original art is from Baechu's Portraits."
authors = ["Taewon Kim <taewonkim2001@outlook.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
